--- a/dex.html
+++ b/dex.html
@@ -934,7 +934,62 @@
                     <textarea id="message" name="message" rows="5" required></textarea>
                     <button type="submit" class="btn">Kirim</button>
                 </form>
-        
+
+                <!-- Anggota 11 -->
+                <div class="profile">
+                    <img src="images/fauzan.jpeg" alt="Foto Anggota 11">
+                    <h3>Fauzan Tamher</h3>
+                    <h3>201955202020</h3>
+                    <p>Deskripsi singkat tentang anggota 11, keahlian, dan perannya dalam tim.</p>
+
+                    <h3>Keterampilan</h3>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>No.</th>
+                                <th>Keterampilan</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Melukis</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <h3>Proyek</h3>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>No.</th>
+                                <th>Nama Proyek</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>wWebsite Sistem Informasi Surat Masuk & Keluar</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact">
+            <div class="section-container">
+                <h2>Kontak Kami</h2>
+                <form action="#" method="post">
+                    <label for="name">Nama:</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="message">Pesan:</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                    <button type="submit" class="btn">Kirim</button>
+                </form>
+                
                 <!-- Additional Contact Information -->
                 <div class="contact-info">
                     <h3>Hubungi Kami Melalui:</h3>
