--- a/dex.html
+++ b/dex.html
@@ -969,7 +969,7 @@
                         <tbody>
                             <tr>
                                 <td>1</td>
-                                <td>wWebsite Sistem Informasi Surat Masuk & Keluar</td>
+                                <td>Website Sistem Informasi Surat Masuk & Keluar</td>
                             </tr>
                         </tbody>
                     </table>
